Enable opening up illegal method calls